# impresso-make-cookbook

./: .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  Makefile  Pipfile  README.md  RELEASE_DOCUMENTATION_SUMMARY.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_PROCESS.md  RELEASE_SUMMARY_v1.3.0.md  RELEASE_SUMMARY_v1.4.0.md  TASK_COMPLETION_REPORT.md  UPDATE_RELEASE_INSTRUCTIONS.md  aggregators_bboxqa.mk  aggregators_canonicalconsolidated.mk  aggregators_langident.mk  aggregators_lingproc.mk  aggregators_reocr.mk  aggregators_topics.mk  aws.mk  clean.mk  comment_template.mk  dotenv.sample  help.mk  input_paths_langident.mk  input_paths_rebuilt.mk  install_apt.sh  install_brew.sh  local_to_s3.mk  log.mk  main_targets.mk  make_settings.mk  newspaper_list.mk  output_paths_lingproc.mk  paths_TEMPLATE.mk  paths_bboxqa.mk  paths_canonical.mk  (+56 more)
.github/: copilot-instructions.md
lib/: __init__.py  common.py  langident_stats.jq  list_newspapers.py  local_to_s3.py  manage_s3_wip.py  pagestats.jq  pyproject.toml  s3_aggregator.py  s3_collection_aggregator.py  s3_comparer.py  s3_compiler.py  s3_pipeline_support.py  s3_regex_matcher.py  s3_sampler.py  s3_set_timestamp.py  s3_to_local_stamps.py
